search pannel overflow issue resolved, added function to increase readebility of large numbers

--- a/src/Components/SearchPannel/search.css
+++ b/src/Components/SearchPannel/search.css
@@ -4,6 +4,7 @@
     background-color: #fff;
     padding-left: 1rem;
     padding-right: 0.4rem;
+    overflow-y: hidden;
 
 }
 .pannel .top{
